# bc-rust

./: .env.example  .gitignore  Cargo.toml  build_log.txt  conectarme.txt  consultas.sql  diagrama.mmd  esquema.sql  schema.sql
src/: clave_embebida.rs  config.rs  crear_monedas.rs  crypto_aes.rs  db.rs  logs.rs  main.rs  minar.rs  models.rs  reiniciar.rs  utils.rs
