[package]
name = "monedas_sistema"
version = "1.0.0"
edition = "2021"
authors = ["Developer"]
description = "Sistema de monedas digitales con cifrado AES-256-GCM y PostgreSQL"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }

# Cryptography
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Environment variables
dotenv = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DateTime with serde support
chrono = { version = "0.4", features = ["serde"] }

# Signal handling
ctrlc = { version = "3.4", features = ["termination"] }

# Additional utilities
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true